Make fixes so branch will build